--- a/P0/res/layout/tedit.xml
+++ b/P0/res/layout/tedit.xml
@@ -22,7 +22,7 @@
 <Spinner 
 	android:layout_height="wrap_content" 
 	android:layout_width="fill_parent"
-	android:id="@+id/spinner1"
+	android:id="@+id/categoryGet"
 />
 <Button
 	android:id="@+id/add"
