--- a/P0/res/layout/main.xml
+++ b/P0/res/layout/main.xml
@@ -4,9 +4,21 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     >
-<TextView  
-    android:layout_width="fill_parent" 
-    android:layout_height="wrap_content" 
-    android:text="@string/hello"
-    />
+<EditText  
+	android:layout_width="fill_parent" 
+	android:layout_height="wrap_content" 
+	android:id="@+id/catGet"
+	android:paddingBottom="5dip"
+/>
+<Button
+	android:id="@+id/b1"
+	android:layout_width="fill_parent" 
+	android:layout_height="wrap_content"
+	android:text="Add Task"/>
+		
+<Button
+	android:id="@+id/b2"
+	android:layout_width="fill_parent" 
+	android:layout_height="wrap_content"
+	android:text="Add Cat"/>
 </LinearLayout>
