Not sure what is new

--- a/P0/res/layout/cat_spin.xml
+++ b/P0/res/layout/cat_spin.xml
@@ -2,11 +2,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_height="wrap_content"
     >
-<TextView 
-	android:id="@+id/catfill" 
-    android:layout_width="wrap_content"
+    
+<TextView
+	android:id="@+id/text1" 
+    android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:textColor="#000"
     android:textStyle="bold"
