--- a/P0/res/layout/tedit.xml
+++ b/P0/res/layout/tedit.xml
@@ -1,41 +1,97 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<merge 
+	xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:DoneBar="http://schemas.android.com/apk/res/com.hag.bucketlst"
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+>
+
+	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:background="#AA000000"
+    android:layout_gravity="bottom"
     >
-<TextView  
-    android:layout_width="fill_parent" 
-    android:layout_height="wrap_content" 
-    android:text="@string/title"
-    android:padding="5dip"
-	android:textStyle="bold"
-	android:textSize="12px"
-/>
-<EditText  
-	android:layout_width="fill_parent" 
-	android:layout_height="wrap_content" 
-	android:id="@+id/titleGet"
-	android:paddingBottom="5dip"
-/>
-<TextView  
-    android:layout_width="fill_parent" 
-    android:layout_height="wrap_content" 
-    android:text="@string/category"
-	android:padding="5dip"
-	android:textStyle="bold"
-	android:textSize="12px"
-/>
-<Spinner 
-	android:layout_height="wrap_content" 
-	android:layout_width="fill_parent"
-	android:id="@+id/categoryGet"
-    android:textColor="#000"
-/>
-<Button
-	android:id="@+id/add"
-	android:layout_width="fill_parent" 
-	android:layout_height="wrap_content" 
-	android:text="@string/add"
-/>
-</LinearLayout>
+		<TextView  
+		    android:layout_width="fill_parent" 
+		    android:layout_height="wrap_content" 
+		    android:text="@string/title"
+		    android:padding="5dip"
+			android:textStyle="bold"
+			android:textSize="12px"
+		/>
+		
+		<EditText  
+			android:layout_width="fill_parent" 
+			android:layout_height="wrap_content" 
+			android:id="@+id/titleGet"
+			android:paddingBottom="5dip"
+		/>
+		
+		<TextView  
+		    android:layout_width="fill_parent" 
+		    android:layout_height="wrap_content" 
+		    android:text="@string/category"
+			android:padding="5dip"
+			android:textStyle="bold"
+			android:textSize="12px"
+		/>
+		
+		<RelativeLayout 
+			xmlns:android="http://schemas.android.com/apk/res/android"
+		    android:layout_width="fill_parent"
+		    android:layout_height="?android:attr/listPreferredItemHeight"
+		    android:padding="6dip">
+		    
+		   	<Button
+				android:id="@+id/newCategory"
+		        android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+		        android:layout_alignParentTop="true"
+		        android:layout_alignParentBottom="true"
+		        android:layout_marginRight="6dip"
+		        android:gravity="center_vertical"
+		        android:text="Edit"
+		        android:textSize="12px"
+			/>
+		    
+			<Spinner 
+				android:prompt="@string/catSelect"
+		        android:layout_width="fill_parent"
+		        android:layout_height="wrap_content"
+		        android:layout_toRightOf="@+id/newCategory"
+		        android:layout_alignParentRight="true"
+		        android:layout_alignParentTop="true"
+		        android:layout_alignWithParentIfMissing="true"	                
+		        android:gravity="center_vertical"
+				android:id="@+id/categoryGet"
+			/>
+			
+		</RelativeLayout>
+		
+	</LinearLayout>
+
+	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:background="#AA000000"
+    android:layout_gravity="bottom|center"
+    android:gravity="bottom"
+    >
+    
+	    <Button
+	    android:background="@android:drawable/btn_dropdown" 
+		android:id="@+id/add"
+		android:layout_width="fill_parent" 
+		android:layout_height="wrap_content" 
+		android:text="@string/add"
+		android:paddingTop="8dip"
+		android:layout_gravity="center"
+		/>
+
+	</LinearLayout>
+</merge>
