--- a/P0/res/layout/tedit.xml
+++ b/P0/res/layout/tedit.xml
@@ -40,6 +40,17 @@
 			android:textSize="12px"
 		/>
 		
+		<Button
+	    android:background="@android:drawable/btn_dropdown" 
+		android:id="@+id/newCategory"
+		android:layout_width="fill_parent" 
+		android:layout_height="wrap_content" 
+		android:text="@string/catSelect"
+		android:paddingTop="8dip"
+		android:layout_gravity="center"
+		/>
+		
+		<!--
 		<RelativeLayout 
 			xmlns:android="http://schemas.android.com/apk/res/android"
 		    android:layout_width="fill_parent"
@@ -48,7 +59,7 @@
 		    
 		   	<Button
 				android:id="@+id/newCategory"
-		        android:layout_width="wrap_content"
+		        android:layout_width="fill_parent"
 		        android:layout_height="wrap_content"
 		        android:layout_alignParentTop="true"
 		        android:layout_alignParentBottom="true"
@@ -57,7 +68,7 @@
 		        android:text="Edit"
 		        android:textSize="12px"
 			/>
-		    
+			
 			<Spinner 
 				android:prompt="@string/catSelect"
 		        android:layout_width="fill_parent"
@@ -69,8 +80,9 @@
 		        android:gravity="center_vertical"
 				android:id="@+id/categoryGet"
 			/>
-			
+
 		</RelativeLayout>
+		-->
 		
 	</LinearLayout>
 
@@ -84,7 +96,6 @@
     >
     
 	    <Button
-	    android:background="@android:drawable/btn_dropdown" 
 		android:id="@+id/add"
 		android:layout_width="fill_parent" 
 		android:layout_height="wrap_content" 
