P0s Working - should optimize

--- a/P0/res/layout/cedit.xml
+++ b/P0/res/layout/cedit.xml
@@ -1,19 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     >
-<EditText  
-	android:layout_width="fill_parent" 
-	android:layout_height="wrap_content" 
-	android:id="@+id/catGet"
-	android:paddingBottom="5dip"
-/>
+    
+	<EditText  
+		android:layout_width="fill_parent" 
+		android:layout_height="wrap_content" 
+		android:id="@+id/catGet"
+		android:paddingBottom="5dip"
+	/>
 		
-<Button
-	android:id="@+id/b2"
-	android:layout_width="fill_parent" 
-	android:layout_height="wrap_content"
-	android:text="Add Cat"/>
+	<Button
+		android:id="@+id/b2"
+		android:layout_width="fill_parent" 
+		android:layout_height="wrap_content"
+		android:text="Add Bucket"
+	/>
+	
+	<ListView 
+	    android:id="@+id/android:list"
+	    android:layout_width="fill_parent"
+	    android:layout_height="wrap_content"
+	/>
+	
 </LinearLayout>
