--- a/P0/res/layout/tedit.xml
+++ b/P0/res/layout/tedit.xml
@@ -48,6 +48,7 @@
 		android:text="@string/catSelect"
 		android:paddingTop="8dip"
 		android:layout_gravity="center"
+		android:gravity="left|center_vertical"
 		/>
 		
 		<!--
