--- a/P0/res/layout/main.xml
+++ b/P0/res/layout/main.xml
@@ -6,19 +6,19 @@
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
->
+	>
 
 	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="#AA000000"
-    android:layout_gravity="bottom"
+    android:layout_gravity="top|center"
     >
 	    
 	    <ListView 
 	    android:id="@+id/android:list"
-	    android:layout_width="wrap_content"
+	    android:layout_width="fill_parent"
 	    android:layout_height="wrap_content"
 	    />
 	  	
@@ -26,7 +26,7 @@
 	  	android:id="@+id/android:empty"
 	    android:layout_width="wrap_content"
 	    android:layout_height="wrap_content"
-	    android:text="No Notes!"
+	    android:text="No Tasks!"
 	    />
 			
 	</LinearLayout>
@@ -50,4 +50,5 @@
 		/>
 
 	</LinearLayout>
+	
 </merge>
