--- a/P0/res/layout/task_row.xml
+++ b/P0/res/layout/task_row.xml
@@ -1,9 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView android:id="@+id/text1" xmlns:android="http://schemas.android.com/apk/res/android"
+
+<RelativeLayout 
+	xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="?android:attr/listPreferredItemHeight"
-    android:textAppearance="?android:attr/textAppearanceLarge"
-    android:gravity="center_vertical"
-    android:paddingLeft="5dip"
-    android:singleLine="true"
- />
+    android:padding="4dip"
+    >
+    
+	<CheckBox
+		android:id="@+id/taskCheck"
+        android:layout_height="fill_parent"
+        android:layout_width="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginRight="6dip"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
+	/>
+	
+		 
+	 <TextView
+		android:id="@+id/text1" 
+		
+	    android:layout_width="fill_parent"
+    	android:layout_height="26dip"
+    	android:textSize="20dip"
+		
+		android:layout_toRightOf="@id/taskCheck"
+		android:layout_centerVertical="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignWithParentIfMissing="true"
+        
+        android:gravity="center_vertical"
+	    android:singleLine="true"
+	 />
+    
+	<TextView 
+		android:id="@+id/cat"
+		
+	    android:layout_width="fill_parent"
+	    android:layout_height="20dip"
+	    android:textSize="12dip"
+		
+		android:layout_toRightOf="@id/taskCheck"
+		android:layout_below="@id/text1"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:gravity="bottom"
+        
+	    android:singleLine="true"
+	    android:ellipsize="marquee"
+	    android:text="Simple application that shows how to use RelativeLayout"
+	 />
+ 
+ </RelativeLayout>
