--- a/P0/res/layout/main.xml
+++ b/P0/res/layout/main.xml
@@ -11,17 +11,17 @@
 	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_height="wrap_content"
     android:background="#AA000000"
     android:layout_gravity="top|center"
     >
-	    
+
 	    <ListView 
 	    android:id="@+id/android:list"
 	    android:layout_width="fill_parent"
 	    android:layout_height="wrap_content"
 	    />
-	  	
+	  		
 	  	<TextView
 	  	android:id="@+id/android:empty"
 	    android:layout_width="wrap_content"
@@ -30,7 +30,6 @@
 	    />
 			
 	</LinearLayout>
-
 	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="fill_parent"
