--- a/P0/res/layout/ntedit.xml
+++ b/P0/res/layout/ntedit.xml
@@ -119,6 +119,7 @@
 								android:paddingTop="8dip"
 								android:layout_gravity="center"
 								android:gravity="left|center_vertical"
+								android:singleLine="true"
 								/>
 						</LinearLayout>
 						<View
@@ -194,6 +195,42 @@
 								>
 							</Spinner>
 						</LinearLayout>
+						<View
+							android:background="@drawable/line"
+							android:padding="5.0dip"
+							android:layout_width="fill_parent"
+							android:layout_height="1.0dip"
+							>
+						</View>
+						<LinearLayout
+							android:orientation="horizontal"
+							android:padding="5.0dip"
+							android:layout_width="fill_parent"
+							android:layout_height="wrap_content"
+							>
+							<TextView
+								android:textStyle="bold"
+								android:textColor="#FFFFFFFF"
+								android:layout_width="fill_parent"
+								android:layout_height="wrap_content"
+								android:text="@string/collaborators"
+								>
+							</TextView>
+						</LinearLayout>
+						<LinearLayout
+							android:orientation="horizontal"
+							android:padding="5.0dip"
+							android:layout_width="fill_parent"
+							android:layout_height="wrap_content"
+							>
+							<Button
+								android:id="@+id/taskCollabs"
+								android:layout_width="fill_parent"
+								android:layout_height="wrap_content"
+								android:text="@string/choCollab"
+								>
+							</Button>
+						</LinearLayout>						
 					</LinearLayout>
 				</ScrollView>
 				<LinearLayout 
@@ -286,7 +323,7 @@
 						android:id="@+id/taskDone"
 						android:layout_width="fill_parent" 
 						android:layout_height="wrap_content" 
-						android:text="Add Task"
+						android:text="@string/taskComplete"
 						android:paddingTop="8dip"
 						android:layout_gravity="center|bottom"
 						/>
