--- a/P0/res/layout/n_task_row.xml
+++ b/P0/res/layout/n_task_row.xml
@@ -3,11 +3,12 @@
 <LinearLayout 
 	xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="?android:attr/listPreferredItemHeight"
-    android:padding="4dip"
+    android:layout_height="55dip"
+    android:padding="6dip"
     >
     
    	<ImageView
+   		android:src="@drawable/red_grad_bg"
 		android:layout_gravity="left"
 		android:id="@+id/priColor"
 		android:layout_width="4.0dip"
@@ -20,46 +21,36 @@
 		android:id="@+id/taskCheck"
         android:layout_height="fill_parent"
         android:layout_width="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentBottom="true"
+		android:background="@drawable/checkbox_background"
         android:layout_marginRight="3dip"
         android:layout_marginLeft="3dip"
         android:focusable="false"
-        android:focusableInTouchMode="false"
+        android:button="@drawable/selector_checkbox"
 	/>
- 
-	 <TextView
-		android:id="@+id/text1" 
-		
-	    android:layout_width="fill_parent"
-    	android:layout_height="26dip"
-    	android:textSize="20dip"
-		
-		android:layout_toRightOf="@id/taskCheck"
-		android:layout_centerVertical="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignWithParentIfMissing="true"
-        
-        android:gravity="center_vertical"
-	    android:singleLine="true"
-	 />
-    
-	<TextView 
-		android:id="@+id/cat"
-		
-	    android:layout_width="fill_parent"
-	    android:layout_height="20dip"
-	    android:textSize="12dip"
-		
-		android:layout_toRightOf="@id/taskCheck"
-		android:layout_below="@id/text1"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:gravity="bottom"
-        
-	    android:singleLine="true"
-	    android:ellipsize="marquee"
-	    android:text="Simple application that shows how to use RelativeLayout"
-	 />
- 
- </RelativeLayout>
+ 	<LinearLayout
+ 		android:orientation="vertical"
+		android:layout_width="0.0dip"
+		android:layout_height="fill_parent"
+		android:layout_weight="1.0"
+		>
+		 <TextView
+			android:id="@+id/text1" 			
+			android:textStyle="bold"
+			android:textColor="#FFFFFFFF"
+			android:gravity="left"
+			android:layout_width="fill_parent"
+			android:layout_height="0.0dip"
+			android:singleLine="true"
+			android:layout_weight="1.0"
+		 />
+		<TextView 
+			android:id="@+id/cat"
+			android:textColor="#FFFFFFFF"
+			android:ellipsize="marquee"
+			android:layout_width="fill_parent"
+			android:layout_height="0.0dip"
+			android:singleLine="true"
+			android:layout_weight="1.0"
+		 />
+	</LinearLayout>
+</LinearLayout>
