Location Assignment update

--- a/Location Assignment/res/layout/main.xml
+++ b/Location Assignment/res/layout/main.xml
@@ -1,33 +1,105 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+
+<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@android:id/tabhost"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    >
-<TextView  
-    android:layout_width="fill_parent" 
-    android:layout_height="wrap_content" 
-    android:text="@string/hello"
-    />
-<Button 
-	android:id="@+id/find_me"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-   	android:layout_alignParentBottom="true"
-   	android:text="@string/findMe" 
-   	/>
-<CheckBox 
-	android:id="@+id/wifi_on"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-   	android:layout_alignParentBottom="true"
-   	android:text="@string/wifiOn" 
-   	/>
-<CheckBox 
-	android:id="@+id/gps_on"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-   	android:layout_alignParentBottom="true"
-   	android:text="@string/gpsOn" 
-   	/>
-</LinearLayout>
+    android:layout_height="fill_parent">
+    
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+     >
+        
+        <TabWidget
+            android:id="@android:id/tabs"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content" 
+         />
+         
+        <FrameLayout
+            android:id="@android:id/tabcontent"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+         >
+         
+         
+			<LinearLayout 
+				xmlns:android="http://schemas.android.com/apk/res/android"
+				android:id="@+id/textView"
+			    android:orientation="vertical"
+			    android:layout_width="fill_parent"
+			    android:layout_height="fill_parent"
+			    >
+			    
+				<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+				    android:orientation="vertical"
+				    android:layout_width="fill_parent"
+				    android:layout_height="wrap_content"
+				    >    
+					<Button 
+						android:id="@+id/find_me"
+					    android:layout_width="fill_parent"
+					    android:layout_height="wrap_content"
+					   	android:layout_alignParentBottom="true"
+					   	android:text="@string/findMe" 
+					   	/>
+					<CheckBox 
+						android:id="@+id/wifi_on"
+					    android:layout_width="fill_parent"
+					    android:layout_height="wrap_content"
+					   	android:layout_alignParentBottom="true"
+					   	android:text="@string/wifiOn" 
+					   	/>
+					<CheckBox 
+						android:id="@+id/gps_on"
+					    android:layout_width="fill_parent"
+					    android:layout_height="wrap_content"
+					   	android:layout_alignParentBottom="true"
+					   	android:text="@string/gpsOn" 
+					   	/>
+				   	</LinearLayout>
+				   	
+			   	  	<ScrollView
+				   	  	android:layout_width="fill_parent"
+				    	android:layout_height="fill_parent"
+				    	>
+			    	
+			    		<TextView
+				    		android:id="@+id/output" 
+				    		android:layout_width="fill_parent"
+				      		android:layout_height="wrap_content" 
+				      		/>
+			  		
+			  		</ScrollView>
+			</LinearLayout>
+			
+			<LinearLayout
+				xmlns:android="http://schemas.android.com/apk/res/android"
+				android:id="@+id/mapView"
+			    android:orientation="vertical"
+			    android:layout_width="fill_parent"
+			    android:layout_height="fill_parent"
+			    >
+			    			    			    
+			    <!-- 			    			   
+   				<TextView
+		    		android:id="@+id/output" 
+		    		android:layout_width="fill_parent"
+		      		android:layout_height="wrap_content" 
+	      		/>
+				-->
+				<com.google.android.maps.MapView
+					android:id="@+id/myGMap"
+				    android:layout_width="fill_parent"
+				    android:layout_height="fill_parent"
+				    android:enabled="true"
+				 	android:clickable="true"
+				    android:apiKey="0qNOENzJvxnlEeAOk3mpffTHthZv_4aSDcVQLJw"
+				    />
+
+						
+			</LinearLayout>
+         </FrameLayout>
+    </LinearLayout>
+</TabHost>
