Location manager ready to be tested

--- a/Location Assignment/res/layout/main.xml
+++ b/Location Assignment/res/layout/main.xml
@@ -82,13 +82,14 @@
 			    android:layout_height="fill_parent"
 			    >
 			    			    			    
-			    <!-- 			    			   
+			   			    			   
    				<TextView
 		    		android:id="@+id/output" 
 		    		android:layout_width="fill_parent"
 		      		android:layout_height="wrap_content" 
+		      		android:text="hello"
 	      		/>
-				-->
+				 <!-- 
 				<com.google.android.maps.MapView
 					android:id="@+id/myGMap"
 				    android:layout_width="fill_parent"
@@ -97,7 +98,7 @@
 				 	android:clickable="true"
 				    android:apiKey="0qNOENzJvxnlEeAOk3mpffTHthZv_4aSDcVQLJw"
 				    />
-
+				-->
 						
 			</LinearLayout>
          </FrameLayout>
