--- a/P0/res/layout/window_title.xml
+++ b/P0/res/layout/window_title.xml
@@ -8,13 +8,74 @@
 	android:paddingLeft="5dip"
 	android:background="#323331">
 
+	<!-- 
 	<TextView 
 		android:id="@+id/header" 
 		android:layout_width="wrap_content" 
 		android:layout_height="wrap_content"
 		android:text="DATE HERE"
 		 />
+ 	-->
+	<LinearLayout
+		android:layout_width="45dip"
+		android:layout_height="fill_parent"
+		android:padding="5dip"
+		android:gravity="center"
+		android:layout_gravity="center"
+		>
+		    
+		<ImageButton
+			android:id="@+id/myProfile"
+	        android:layout_height="wrap_content"
+	        android:layout_width="wrap_content"
+			android:background="@drawable/my_profile"
+	        android:layout_marginRight="3dip"
+	        android:layout_marginLeft="3dip"
+	        android:focusable="false"
+	        android:focusableInTouchMode="false"
+			>
+		</ImageButton>    
 	
+	</LinearLayout>  
+	
+	<View
+		android:background="@drawable/line"
+		android:padding="5.0dip"
+		android:layout_width="1.0dip"
+		android:layout_height="fill_parent"
+		>
+	</View>			 
+    
+	<LinearLayout
+		android:layout_width="50dip"
+		android:layout_height="fill_parent"
+		android:padding="5dip"
+		android:gravity="center"
+		android:layout_gravity="center"
+		>    
+    
+		<ImageButton
+			android:id="@+id/search"
+	        android:layout_height="wrap_content"
+	        android:layout_width="wrap_content"
+			android:background="@drawable/search_icon"
+	        android:layout_marginRight="3dip"
+	        android:layout_marginLeft="3dip"
+	        android:focusable="false"
+	        android:focusableInTouchMode="false"
+			>
+		</ImageButton>      
+	
+	</LinearLayout>
+	
+	<View
+		android:background="@drawable/line"
+		android:padding="5.0dip"
+		android:layout_width="1.0dip"
+		android:layout_height="fill_parent"
+		>
+	</View>			 
+		
 	<LinearLayout
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
@@ -26,8 +87,10 @@
 			android:id="@+id/title"
 			android:layout_width="wrap_content" 
 			android:layout_height="wrap_content"
-			android:textSize="11dip"
-			android:paddingRight="5dip" />
+			android:textSize="30sp"
+			android:textColor="#FFFFFFFF"
+			android:singleLine="true"
+			android:padding="5dip" />
 				
 	</LinearLayout>
 
