--- a/P0/res/layout/window_title.xml
+++ b/P0/res/layout/window_title.xml
@@ -1,25 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
   	xmlns:android="http://schemas.android.com/apk/res/android"
+  	android:gravity="center_vertical"
   	android:orientation="horizontal"
+  	android:background="#FF323331"
+  	android:paddingLeft="5dip"
 	android:layout_width="fill_parent"
 	android:layout_height="50dip"
-	android:gravity="center_vertical"
-	android:paddingLeft="5dip"
-	android:background="#323331">
+	>
 
-	<!-- 
-	<TextView 
-		android:id="@+id/header" 
-		android:layout_width="wrap_content" 
-		android:layout_height="wrap_content"
-		android:text="DATE HERE"
-		 />
- 	-->
+	<LinearLayout
+		android:gravity="center"
+		android:orientation="horizontal"
+		android:id="@+id/buttonView"	
+		android:layout_width="wrap_content"
+		android:layout_height="fill_parent"
+		>
+		
 	<LinearLayout
 		android:layout_width="45dip"
 		android:layout_height="fill_parent"
-		android:padding="5dip"
 		android:gravity="center"
 		android:layout_gravity="center"
 		>
@@ -28,9 +28,9 @@
 			android:id="@+id/myProfile"
 	        android:layout_height="wrap_content"
 	        android:layout_width="wrap_content"
-			android:background="@drawable/my_profile"
-	        android:layout_marginRight="3dip"
-	        android:layout_marginLeft="3dip"
+			android:src="@drawable/my_profile"
+			android:background="@drawable/btn_check_label_background"
+	        android:padding="30dip"
 	        android:focusable="false"
 	        android:focusableInTouchMode="false"
 			>
@@ -49,7 +49,6 @@
 	<LinearLayout
 		android:layout_width="50dip"
 		android:layout_height="fill_parent"
-		android:padding="5dip"
 		android:gravity="center"
 		android:layout_gravity="center"
 		>    
@@ -58,9 +57,9 @@
 			android:id="@+id/search"
 	        android:layout_height="wrap_content"
 	        android:layout_width="wrap_content"
-			android:background="@drawable/search_icon"
-	        android:layout_marginRight="3dip"
-	        android:layout_marginLeft="3dip"
+			android:src="@drawable/search_icon"
+			android:background="@drawable/btn_check_label_background"
+	        android:padding="30dip"
 	        android:focusable="false"
 	        android:focusableInTouchMode="false"
 			>
@@ -75,7 +74,7 @@
 		android:layout_height="fill_parent"
 		>
 	</View>			 
-		
+	</LinearLayout>
 	<LinearLayout
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
