--- a/P0/res/layout/collab_edit.xml
+++ b/P0/res/layout/collab_edit.xml
@@ -28,7 +28,7 @@
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:layout_weight="1.0"
-			android:hint="Add a bucket"
+			android:hint="Add a new user"
 			>
 		</EditText>	
 	</LinearLayout>
